force-app/main/default/objects/Badge__c/Badge__c.object-meta.xml
<CustomObject>
    <description>Recognition Awards</description>
    <label>Badge</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>