force-app/main/default/objects/Badge__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <formula>image( Badge_Image_URL__c , &quot;Badge&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge</label>
    <type>Text</type>
</CustomField>