force-app/main/default/objects/Badge__c/fields/Badge_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Badge_Image_URL__c</fullName>
    <inlineHelpText>Upload image into Salesforce public folder and copy location URL here</inlineHelpText>
    <label>Badge Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>